Update libs and refactor CSV file parsing (USOS format)